fixed spacing issue with h1

--- a/src/shared/typography.scss
+++ b/src/shared/typography.scss
@@ -7,6 +7,7 @@
 
   &-1 {
     font-size: 150px;
+    margin-left: -12px;
   }
 
   &-2 {
